--- a/src/Gui/FileInputTab.fxml
+++ b/src/Gui/FileInputTab.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane fx:id="filePane" gridLinesVisible="false" minHeight="-1.0" prefHeight="119.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.FileInputController">
+<GridPane fx:id="filePane" gridLinesVisible="false" maxWidth="1.7976931348623157E308" minHeight="-1.0" prefHeight="119.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.FileInputController">
   <children>
     <Label alignment="CENTER" prefWidth="667.0" text="Input file" textAlignment="LEFT" GridPane.columnIndex="0" GridPane.rowIndex="0" />
     <Label alignment="CENTER" prefWidth="544.0" text="Data Separator" GridPane.columnIndex="1" GridPane.rowIndex="0" />
@@ -59,8 +59,8 @@
         <Insets bottom="5.0" />
       </padding>
     </VBox>
-    <Label alignment="CENTER" prefWidth="300.0" text="Available Time Series in File" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-    <Label alignment="CENTER" prefWidth="300.0" text="Loaded for Working" GridPane.columnIndex="4" GridPane.rowIndex="0" />
+    <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefWidth="300.0" text="Available Time Series in File" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" />
+    <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefWidth="300.0" text="Loaded for Working" GridPane.columnIndex="4" GridPane.rowIndex="0" />
     <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="1">
       <bottom>
         <Button fx:id="openFileButton" alignment="BOTTOM_CENTER" font="$x2" mnemonicParsing="false" onAction="#selectFile" prefHeight="10.0" prefWidth="200.0" text="Select…" textAlignment="LEFT" wrapText="false" />
@@ -90,7 +90,7 @@
                 <Tooltip style="-fx-background-color: white;" text="Use a fixed number of characters to separate text file rows into single numbers." />
               </tooltip>
             </RadioButton>
-            <RadioButton fx:id="tabSeparatorRadio" font="$x2" mnemonicParsing="false" prefWidth="372.0" text="Tab" toggleGroup="$separatorSelection" />
+            <RadioButton fx:id="tabSeparatorRadio" font="$x2" mnemonicParsing="false" prefWidth="372.0" selected="false" text="Tab" toggleGroup="$separatorSelection" />
             <RadioButton fx:id="characterSeparatorRadio" contentDisplay="RIGHT" font="$x2" graphicTextGap="20.0" mnemonicParsing="false" prefWidth="307.0" selected="false" text="Character" toggleGroup="$separatorSelection" underline="false">
               <graphic>
                 <TextField fx:id="characterSeparatorText" editable="true" prefWidth="40.0" promptText="" />
@@ -110,9 +110,9 @@
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="197.0" />
     <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="151.0" />
-    <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" minWidth="10.0" percentWidth="-1.0" prefWidth="-1.0" />
+    <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="-1.0" prefWidth="-1.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints fillWidth="true" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="10.0" percentWidth="-1.0" prefWidth="-1.0" />
+    <ColumnConstraints fillWidth="true" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="-1.0" prefWidth="-1.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="22.0" prefHeight="22.0" vgrow="SOMETIMES" />
