Improved time series view, updated data model.

--- a/src/Gui/FileInputTab.fxml
+++ b/src/Gui/FileInputTab.fxml
@@ -30,12 +30,12 @@
         </Label>
         <HBox id="HBox" alignment="CENTER" spacing="5.0">
           <children>
-            <Button alignment="CENTER_LEFT" minWidth="25.0" mnemonicParsing="false" onAction="#loadAll" prefWidth="34.0" text="all">
+            <Button alignment="CENTER_LEFT" mnemonicParsing="false" onAction="#loadSelected" prefWidth="67.0" text="selected">
               <font>
                 <Font size="11.0" fx:id="x2" />
               </font>
             </Button>
-            <Button alignment="CENTER_LEFT" font="$x2" mnemonicParsing="false" onAction="#loadSelected" prefWidth="67.0" text="selected" />
+            <Button fx:id="loadAllButton" alignment="CENTER_LEFT" font="$x2" minWidth="25.0" mnemonicParsing="false" onAction="#loadAll" prefWidth="34.0" text="all" />
           </children>
         </HBox>
         <Button alignment="CENTER_LEFT" contentDisplay="RIGHT" font="$x2" mnemonicParsing="false" onAction="#loadRandom" prefWidth="228.0" text="random..." textAlignment="LEFT" />
@@ -79,7 +79,7 @@
       <center>
         <VBox alignment="TOP_CENTER" prefHeight="240.0" prefWidth="162.0" spacing="2.0">
           <children>
-            <RadioButton fx:id="fixedWidthSeparatorRadio" contentDisplay="RIGHT" font="$x2" graphicTextGap="8.0" mnemonicParsing="false" prefWidth="400.0" selected="true" text="Fixed Width">
+            <RadioButton fx:id="fixedWidthSeparatorRadio" contentDisplay="RIGHT" font="$x2" graphicTextGap="8.0" mnemonicParsing="false" prefWidth="400.0" selected="false" text="Fixed Width">
               <graphic>
                 <TextField fx:id="fixedWidthSeparatorText" prefWidth="40.0" promptText="" style="" text="16" />
               </graphic>
@@ -90,7 +90,7 @@
                 <Tooltip autoHide="true" style="" text="Use a fixed number of characters to separate text file rows into single numbers." />
               </tooltip>
             </RadioButton>
-            <RadioButton fx:id="tabSeparatorRadio" font="$x2" mnemonicParsing="false" prefWidth="372.0" selected="false" text="Tab" toggleGroup="$separatorSelection">
+            <RadioButton fx:id="tabSeparatorRadio" font="$x2" mnemonicParsing="false" prefWidth="372.0" selected="true" text="Tab" toggleGroup="$separatorSelection">
               <tooltip>
                 <Tooltip text="Split lines into number strings along each tab character." />
               </tooltip>
