--- a/src/Visualization/TimeSeriesView.fxml
+++ b/src/Visualization/TimeSeriesView.fxml
@@ -13,10 +13,9 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" fx:id="timeSeriesPane" prefHeight="326.9999000000025" prefWidth="1022.0" style="-fx-background-color: gainsboro;" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.TimeSeriesViewController">
+<AnchorPane fx:controller="Visualization.TimeSeriesViewController" fx:id="timeSeriesPane" prefHeight="326.9999000000025" prefWidth="1022.0" style="-fx-background-color: gainsboro;" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
-    <Text rotate="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Series View" translateX="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-45.0" AnchorPane.topAnchor="50.0" />
-    <StackPane id="StackPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
         <LineChart fx:id="lineChart" alternativeRowFillVisible="true" animated="false" cache="true" createSymbols="false" horizontalGridLinesVisible="true" horizontalZeroLineVisible="true" legendVisible="false" prefHeight="273.198974609375" prefWidth="770.0" style="-fx-background-color: white;" verticalGridLinesVisible="true" verticalZeroLineVisible="true">
           <xAxis>
@@ -27,7 +26,7 @@
             </NumberAxis>
           </xAxis>
           <yAxis>
-            <NumberAxis fx:id="yAxis" animated="false" autoRanging="false" label="Degree ˚C" lowerBound="-50.0" side="LEFT" upperBound="0.0" />
+            <NumberAxis fx:id="yAxis" animated="false" autoRanging="false" label="Degree ˚C" lowerBound="-5.0" side="LEFT" upperBound="5.0" />
           </yAxis>
           <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -36,11 +35,10 @@
         <Canvas fx:id="chartCanvas" cache="true" onScroll="#scroll" onZoom="#zoom" />
       </children>
     </StackPane>
-    <Slider fx:id="detailSlider" blockIncrement="1.0" majorTickUnit="1.0" max="20.0" min="1.0" prefHeight="15.99999988079071" prefWidth="206.0" showTickLabels="false" showTickMarks="false" snapToTicks="true" value="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+    <Slider fx:id="detailSlider" blockIncrement="1.0" majorTickUnit="1.0" max="0.0" min="1.0" prefHeight="15.99999988079071" prefWidth="206.0" showTickLabels="false" showTickMarks="false" snapToTicks="true" value="30.0" 
+           AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     <Label id="detailLevelLabel" fx:id="levelOfDetailLabel" text="show every N-th point:" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="215.0" />
-    <Button minHeight="15.999900000002526" mnemonicParsing="false" onAction="#resetView" prefHeight="-1.0" text="reset view" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="25.0" />
+    <Button minHeight="15.999900000002526" mnemonicParsing="false" onAction="#resetView" prefHeight="-1.0" text="reset view" 
+            AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" />
   </children>
-  <stylesheets>
-    <URL value="@timeseriesview.css" />
-  </stylesheets>
 </AnchorPane>
