--- a/src/Visualization/TimeSeriesView.fxml
+++ b/src/Visualization/TimeSeriesView.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.canvas.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
@@ -20,6 +21,17 @@
     <!--The chart is added manually because classes with inheritance can't use XML injection (unless there's a special mechanism for that which I don't know) -->
     <Slider fx:id="detailSlider" blockIncrement="1.0" majorTickUnit="1.0" max="1.0" min="1.0" prefHeight="15.99999988079071" prefWidth="206.0" showTickLabels="false" showTickMarks="false" snapToTicks="true" value="1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     <Label id="detailLevelLabel" fx:id="levelOfDetailLabel" text="show every N-th point:" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="215.0" />
-    <Button alignment="BOTTOM_LEFT" minHeight="15.999900000002526" mnemonicParsing="false" onAction="#resetView" prefHeight="-1.0" text="reset view" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+    <Button cancelButton="false" contentDisplay="GRAPHIC_ONLY" defaultButton="false" graphicTextGap="0.0" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" onAction="#resetView" prefHeight="20.0" prefWidth="20.0" style=";" text="" translateX="-20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+      <graphic>
+        <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
+          <image>
+            <Image url="@../Gui/img/glyphicons_214_resize_small.png" />
+          </image>
+        </ImageView>
+      </graphic>
+      <tooltip>
+        <Tooltip text="Reset view" />
+      </tooltip>
+    </Button>
   </children>
 </AnchorPane>
